k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: lingua-backend
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
  type: ClusterIP
